fixed contrast selector specificity

--- a/package/src/css/color.css
+++ b/package/src/css/color.css
@@ -73,7 +73,8 @@
 :where(.theme-light),
 :where(.theme-dark),
 .color-base,
-.color-base *:not([class*='color-']):not(.color-base [class*='color-'] *) {
+.color-base
+  *:where(:not([class*='color-']):not(.color-base [class*='color-'] *)) {
   --color-1: var(--base-1);
   --color-2: var(--base-2);
   --color-3: var(--base-3);
@@ -105,7 +106,8 @@
 }
 
 .color-brand,
-.color-brand *:not([class*='color-']):not(.color-brand [class*='color-'] *) {
+.color-brand
+  *:where(:not([class*='color-']):not(.color-brand [class*='color-'] *)) {
   --color-1: var(--brand-1);
   --color-2: var(--brand-2);
   --color-3: var(--brand-3);
